will add hover for the techstack

--- a/src/components/TechStack/techstack.css
+++ b/src/components/TechStack/techstack.css
@@ -9,6 +9,156 @@
   }
 }
 
+#rows img:nth-child(1):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(2):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(3):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(4):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(5):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(6):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(7):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(8):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(9):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(10):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(11):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(12):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(13):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(14):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(15):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(16):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(17):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(18):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(19):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(20):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(21):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(22):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(23):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(24):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(25):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(26):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(27):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(28):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(29):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+#rows img:nth-child(30):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
 #rows h4 {
   font-family: 'Raleway';
 }
