--- a/src/components/TechStack/techstack.css
+++ b/src/components/TechStack/techstack.css
@@ -1,3 +1,42 @@
+#rows {
+  background: rgba(44, 62, 80, 0.8);
+  border-radius: 25px;
+}
+
+@media (max-width: 768px) {
+  #rows {
+    border-radius: 0px;
+  }
+}
+
+#rows h4 {
+  font-family: 'Raleway';
+}
+
+#nodejs {
+  width: 40%;
+}
+
+#javascript {
+  width: 22%;
+}
+
+#react {
+  width: 25%;
+}
+
+#sass {
+  width: 25%;
+}
+
+#html5 {
+  width: 25%;
+}
+
+#css3 {
+  width: 30%;
+}
+
 #jestjs {
   width: 20%;
 }
@@ -11,11 +50,11 @@
 }
 
 #rails {
-  width: 50%;
+  width: 30%;
 }
 
 #ruby {
-  width: 25%;
+  width: 20%;
 }
 
 #sql {
